Demo page build.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,25 @@
 			<h1>Hansel</h1>
 			<p>who better to help you with... <br> some breadcrumbs!</p>
 		</div>
-		<div class="column"></div>
+		<div class="column">
+
+			<div class="column-six">
+				<ul class="breadcrumbs">
+					<li><a href="">Breadcrumb</a></li>
+					<li><a href="">Another one</a></li>
+					<li><a href="">Bigger crumb</a></li>
+				</ul>
+			</div>
+
+			<div class="column-six">
+				<ul class="breadcrumbs">
+					<li><a href="">Breadcrumb</a></li>
+					<li><a href="">Another one</a></li>
+					<li><a href="">Bigger crumb</a></li>
+				</ul>
+			</div>
+			
+		</div>
 		<div class="column"></div>
 	</body>
 </html>
