Hansel upd. Demo page. Theming.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				</ul>
 			</div>
 
-			<div class="column-six">
+			<div class="column-six demo-holder">
 				<ul class="breadcrumbs" id="hansel">
 					<li><a href="">Breadcrumb</a></li>
 					<li><a href="">Another one</a></li>
@@ -45,7 +45,7 @@
 		<script>
 		$(function() {
 			$('#hansel').hansel({
-				_button_class: 'theme'
+				_theme: 'theme'
 			});
 		});
 		</script>
