--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="column">
 
 			<div class="column-six">
-				<ul class="breadcrumbs">
+				<ul class="breadcrumb">
 					<li><a href="">Breadcrumb</a></li>
 					<li><a href="">Another one</a></li>
 					<li><a href="">Bigger crumb</a></li>
@@ -29,7 +29,7 @@
 			</div>
 
 			<div class="column-six demo-holder">
-				<ul class="breadcrumbs" id="hansel">
+				<ul class="breadcrumb" id="hansel">
 					<li><a href="">Breadcrumb</a></li>
 					<li><a href="">Another one</a></li>
 					<li><a href="">Bigger crumb</a></li>
